--- a/package.json
+++ b/package.json
@@ -45,5 +45,5 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
-  "homepage": "https://httpmage.github.io"
+  "homepage": "https://httpmage.github.io/Poua_Adrien_6_Kasa_072023"
 }
